Cleanup OvertimeServiceImplTest